--- a/k8s-kind/package.json
+++ b/k8s-kind/package.json
@@ -1,15 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon src/server.js"
+    "start:dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.12",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.2"
   }
 }
