--- a/k8s-kind/k8s/deployment.yaml
+++ b/k8s-kind/k8s/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels: 
       app: nodeserver
-  replicas: 5
+  replicas: 1
   template:
     metadata:
       name: "nodeserver"
@@ -17,4 +17,7 @@ spec:
     spec:
       containers:
         - name: nodeserver
-          image: "ilgssonbraga/hello-nodejs-kind:v3"
+          image: "ilgssonbraga/hello-nodejs-kind:v5"
+          env: 
+            - name: NAME
+              value: "Ilgsson Braga"
