--- a/k8s-kind/package.json
+++ b/k8s-kind/package.json
@@ -7,6 +7,7 @@
     "start:dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
