feat: inject file configmap

--- a/k8s-kind/k8s/deployment.yaml
+++ b/k8s-kind/k8s/deployment.yaml
@@ -17,7 +17,17 @@ spec:
     spec:
       containers:
         - name: nodeserver
-          image: "ilgssonbraga/hello-nodejs-kind:v5"
+          image: "ilgssonbraga/hello-nodejs-kind:v6.1"
           envFrom:
             - configMapRef: 
                 name: nodeserver-env
+          volumeMounts:
+            - mountPath: "/app/myfamily"
+              name:  config
+      volumes:
+        - name: config
+          configMap: 
+            name: configmap-family
+            items:
+            - key: members
+              path: "myfamily.txt"
