--- a/k8s-kind/k8s/deployment.yaml
+++ b/k8s-kind/k8s/deployment.yaml
@@ -17,31 +17,39 @@ spec:
     spec:
       containers:
         - name: nodeserver
-          image: "ilgssonbraga/hello-nodejs-kind:v7.4"
+          image: "ilgssonbraga/hello-nodejs-kind:7.5"
 
-          startupProbe:
-            httpGet: 
-              path: /healthz
-              port: 3333
-            failureThreshold: 30
-            periodSeconds: 3
-            timeoutSeconds: 1
+          resources:
+            requests:
+              cpu: "0.5"
+              memory: 20Mi
+            limits:
+              cpu: "0.5"
+              memory: 25Mi
 
-          readinessProbe:
-            httpGet: 
-              path: /healthz
-              port: 3333
-            failureThreshold: 1
-            periodSeconds: 3
-            timeoutSeconds: 1
-          livenessProbe:
-            httpGet: 
-              path: /healthz
-              port: 3333
-            periodSeconds: 3
-            failureThreshold: 1
-            timeoutSeconds: 1
-            successThreshold: 1
+          # startupProbe:
+          #   httpGet: 
+          #     path: /healthz
+          #     port: 3333
+          #   failureThreshold: 20
+          #   periodSeconds: 3
+          #   timeoutSeconds: 1
+
+          # readinessProbe:
+          #   httpGet: 
+          #     path: /healthz
+          #     port: 3333
+          #   failureThreshold: 1
+          #   periodSeconds: 3
+          #   timeoutSeconds: 1
+          # livenessProbe:
+          #   httpGet: 
+          #     path: /healthz
+          #     port: 3333
+          #   periodSeconds: 3
+          #   failureThreshold: 1
+          #   timeoutSeconds: 1
+          #   successThreshold: 1
           envFrom:
             - configMapRef: 
                 name: nodeserver-env
