feat: persistent volume

--- a/k8s-kind/k8s/deployment.yaml
+++ b/k8s-kind/k8s/deployment.yaml
@@ -58,7 +58,12 @@ spec:
           volumeMounts:
             - mountPath: "/app/myfamily"
               name:  config
+            - mountPath: "/app/pvc"
+              name: nodejsserver-pvc
       volumes:
+        - name: nodejsserver-pvc
+          persistentVolumeClaim:
+            claimName: nodejsserver-pvc
         - name: config
           configMap: 
             name: configmap-family
